@@ -176,6 +176,7 @@ namespace libtorrent
 			, write_cache_line_size(32)
 			, optimistic_disk_retry(10 * 60)
 			, disable_hash_checks(false)
+			, max_suggest_pieces(10)
 		{}
 
 		// this is the user agent that will be sent to the tracker
@@ -621,6 +622,11 @@ namespace libtorrent
 		// testing purposes (typically combined with
 		// disabled_storage)
 		bool disable_hash_checks;
+
+		// the max number of pieces that a peer can
+		// suggest to use before we start dropping
+		// previous suggested piece
+		int max_suggest_pieces;
 	};
 
 #ifndef TORRENT_DISABLE_DHT
